# dz-gene

./: .gitignore  COMMENCER-ICI-AR.md  Cargo.toml  DECISION.md
crates/dzgene-core/: Cargo.toml
crates/dzgene-core/src/: distances.rs  edi.rs  genetics.rs  lib.rs
crates/dzgene-core/tests/: banque_dz.rs
crates/dzgene-core/tests/fixtures/: 1AS - Proteines et enzymes__ABO Proteines.edi  1AS - Proteines et enzymes__acetylcholineesterase.edi  3AS - Evolution et phylogenie__ASPM-Primates.edi  3AS - Genetique - alleles et mutations__ABO ADN.edi  3AS - Genetique - alleles et mutations__ABO Genotypes famille1.edi  3AS - Genetique - alleles et mutations__ABO Polymorphisme.edi  3AS - Genetique - alleles et mutations__CFTR.edi  3AS - Genetique - alleles et mutations__Drepanocytoses .edi  3AS - Genetique - alleles et mutations__Famille-CFTR.edi  3AS - Immunologie__Polymorphisme de HLA A.edi  3AS - Immunologie__Polymorphisme de HLA B.edi  3AS - Immunologie__Polymorphisme de HLA C.edi
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
web/: app.js  index.html  styles.css
web/i18n/: ar.json  fr.json
