[workspace]
resolver = "2"
members = ["crates/dzgene-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
authors = ["Touil Elhadj"]
repository = "https://github.com/azyrhyz/dz-gene"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
